--- a/src/main/resources/templates/scheduling/list.html
+++ b/src/main/resources/templates/scheduling/list.html
@@ -20,6 +20,12 @@
         .treeview .list-group-item span {
             display: inline;
         }
+       .cube {
+           width: 10px;
+           height: 10px;
+           display: inline-block;
+           margin-left: 3px;
+       }
     </style>
 </head>
 <body ng-app="content-app" ng-controller="content-controller">
